<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroud">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/titulo_dialog"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:textSize="28dp"
        android:text="@string/aparcamiento_ocupado"
        android:textAlignment="center"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:background="@android:color/white">

        <TextView
            android:id="@+id/matricula_aparcamiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:textSize="20dp"
            android:text="@string/matricula"/>

        <TextView
            android:id="@+id/modelo_aparcamiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:textSize="20dp"
            android:text="@string/modelo"/>

        <TextView
            android:id="@+id/fecha_aparcamiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="90dp"
            android:textSize="20dp"
            android:text="@string/fecha"/>

        <TextView
            android:id="@+id/hora_aparcamiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="130dp"
            android:textSize="20dp"
            android:text="@string/hora"/>

        <TextView
            android:id="@+id/calle_aparcamiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="170dp"
            android:textSize="20dp"
            android:text="@string/calle"/>

        <TextView
            android:id="@+id/zona_aparcamiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="210dp"
            android:textSize="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/zona"/>
    </RelativeLayout>

    <Button
        android:id="@+id/aceptar"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_centerHorizontal="true"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="350dp"
        android:background="@drawable/round_button"
        android:text="@string/aceptar"
        android:textColor="@drawable/round_button_text"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"/>
</RelativeLayout>