<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroud"
    tools:context=".AparcamientoRegistradoActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/title_activity_aparcamiento_registrado"/>

    <TextView
        android:id="@+id/textView_datos_estacionamiento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="80dp"
        android:text="@string/datos_estacionamiento"
        android:textSize="18dp"
        android:textColor="@android:color/black" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="115dp"
        android:background="@android:color/white">

        <TextView
            android:id="@+id/textView_matricula_estacionamiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:text="@string/matricula_estacionado"
            android:textSize="16dp"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/textView_matricula2_estacionamiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="35dp"
            android:textSize="17dp"
            android:textColor="@android:color/darker_gray" />

        <TextView
            android:id="@+id/textView_modelo_estacionamiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="75dp"
            android:text="@string/modelo_estacionado"
            android:textSize="16dp"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/textView_modelo2_estacionamiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="10dp"
            android:textSize="17dp"
            android:textColor="@android:color/darker_gray" />

        <TextView
            android:id="@+id/textView_fecha_estacionamiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="140dp"
            android:text="@string/fecha_estacionamiento"
            android:textSize="16dp"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/textView_fecha2_estacionamiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="165dp"
            android:layout_marginBottom="10dp"
            android:textSize="17dp"
            android:textColor="@android:color/darker_gray" />

        <TextView
            android:id="@+id/textView_hora_estacionamiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="205dp"
            android:text="@string/hora_estacionamiento"
            android:textSize="16dp"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/textView_hora2_estacionamiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="230dp"
            android:layout_marginBottom="10dp"
            android:textSize="17dp"
            android:textColor="@android:color/darker_gray" />

        <TextView
            android:id="@+id/textView_calle_estacionamiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="270dp"
            android:text="@string/calle_estacionamiento"
            android:textSize="16dp"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/textView_calle2_estacionamiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="295dp"
            android:layout_marginBottom="10dp"
            android:textSize="17dp"
            android:textColor="@android:color/darker_gray" />

        <TextView
            android:id="@+id/textView_zona_estacionamiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="335dp"
            android:text="@string/zona_estacionamiento"
            android:textSize="16dp"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/textView_zona2_estacionamiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="360dp"
            android:layout_marginBottom="10dp"
            android:textSize="17dp"
            android:textColor="@android:color/darker_gray" />
    </RelativeLayout>

    <Button
        android:id="@+id/finalizar_estacionamiento"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="560dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/round_button"
        android:text="@string/finalizar_estacionamiento"
        android:textColor="@drawable/round_button_text"
        android:textStyle="bold"
        android:textSize="16dp"/>

</RelativeLayout>